This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.2.4 (UNRELELASED):
--------------------
Bug fixes:
 * test_apport_unpack.py: Fix test_unpack_python() test when running the
   system-installed tests.
 * data/java_uncaught_exception: Fix for Python 3.
 * test_signal_crashes.py: Show crash reports in /var/crash/.

2.2.3 (2012-06-15):
-------------------
Bug fixes:
 * test/run: Do not run pep8 and pyflakes when running against the sytem
   installed Apport.
 * test_backend_apt_dpkg.py: For the "are we online" check, verify that we can
   download from http://ddebs.ubuntu.com/, not just whether we have a default
   route. The latter is not sufficient for e. g. buildd environments which are
   online, but are restricted by proxies or firewalls.
 * test_report.py: Call "sync" after test script write core dumps, to ensure
   that subsequent operations have a complete one.
 * test_signal_crashes.py: Drop the broken and obsolete test_local_python()
   test. Instead, add two tests which check proper logging.
 * launchpad.py: Fix urlopen() for Python3. Thanks Steve Langasek.
 * test/run: Run the tests under LC_MESSAGES=C, to avoid failing tests on
   translated strings.

2.2.2 (2012-06-13):
-------------------
Improvements:
 * testsuite: Run with Python 3 by default. To test with Python 2, run
   "PYTHON=python2 test/run".

Bug fixes:
 * apport: Redefine sys.std{out,err} when redirecting output, as they are None
   in Python 3 when being called from the kernel.
 * test/test_signal_crashes.py: Clean up unexpected core dumps on failed test
   cases.
 * apport-gtk: Fix crash when closing the crash dialog while the information is
   being collected.
 * hookutils.py, xsession_errors(): Fix crash when running under a non-UTF8 locale.
 * data/apport: Do not use sys.stdin.fileno(), it is invalid when being called
   from the kernel with Python 3.